RESOLVED FIXED102360
[Qt] Adding a null pointer check for currentContext to GraphicsContext3DQt.
https://bugs.webkit.org/show_bug.cgi?id=102360
Summary [Qt] Adding a null pointer check for currentContext to GraphicsContext3DQt.
Zeno Albisser
Reported 2012-11-15 02:47:29 PST
[Qt] Adding a null pointer check for currentContext to GraphicsContext3DQt.
Attachments
Patch (1.98 KB, patch)
2012-11-15 02:51 PST, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2012-11-15 02:51:20 PST
kov's GTK+ EWS bot
Comment 2 2012-11-15 09:31:39 PST
Zeno Albisser
Comment 3 2012-11-16 06:56:19 PST
Comment on attachment 174386 [details] Patch Clearing flags on attachment: 174386 Committed r134945: <http://trac.webkit.org/changeset/134945>
Zeno Albisser
Comment 4 2012-11-16 06:56:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.