[Qt] Adding a null pointer check for currentContext to GraphicsContext3DQt. https://bugs.webkit.org/show_bug.cgi?id=102360

QOpenGLContext::currentContext() will return null, in case there is
no current context. Therefore currentContext must be null-checked
before it can be reused.
Making a context current on a null-surface on the other hand is
perfectly possible.

Reviewed by Kenneth Rohde Christiansen.

* platform/graphics/qt/GraphicsContext3DQt.cpp:
(WebCore::GraphicsContext3DPrivate::blitMultisampleFramebufferAndRestoreContext):

Canonical link: https://commits.webkit.org/120637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134945 268f45cc-cd09-0410-ab3c-d52691b4dbfc